--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="3;url=https://wristfellow.cartpe.in/" />
+    <meta http-equiv="refresh" content="0.5;url=https://wristfellow.cartpe.in/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Redirecting to Wristfellow...</title>
+    <title>Redirecting...</title>
     <style>
         body {
           background: #0f172a;
@@ -18,13 +18,13 @@
           flex-direction: column;
         }
         .spinner {
-          width: 48px;
-          height: 48px;
-          border: 6px solid #fff;
+          width: 36px;
+          height: 36px;
+          border: 4px solid #fff;
           border-top-color: #38bdf8;
           border-radius: 50%;
-          animation: spin 1s linear infinite;
-          margin-bottom: 20px;
+          animation: spin 0.8s linear infinite;
+          margin-bottom: 16px;
         }
         @keyframes spin {
           to {
@@ -34,16 +34,14 @@
         a {
           color: #38bdf8;
           text-decoration: none;
-          margin-top: 10px;
-        }
-        a:hover {
-          text-decoration: underline;
+          margin-top: 8px;
+          font-size: 14px;
         }
     </style>
 </head>
 <body>
 <div class="spinner"></div>
 <h2>Redirecting to Wristfellow...</h2>
-<p>If you are not redirected, <a href="https://wristfellow.cartpe.in/">click here</a>.</p>
+<p>If you're not redirected, <a href="https://wristfellow.cartpe.in/">click here</a>.</p>
 </body>
 </html>
