--- a/index.html
+++ b/index.html
@@ -2,46 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0.5;url=https://wristfellow.cartpe.in/" />
+    <meta http-equiv="refresh" content="0.8;url=https://wristfellow.cartpe.in/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Redirecting...</title>
+    <title>Wristfellow</title>
     <style>
+        * {
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+        }
         body {
-          background: #0f172a;
-          color: #fff;
-          font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+          background: radial-gradient(circle at top left, #0f172a, #020617);
+          color: #ffffff;
+          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+          height: 100vh;
+          overflow: hidden;
           display: flex;
           justify-content: center;
           align-items: center;
-          height: 100vh;
-          margin: 0;
-          flex-direction: column;
         }
-        .spinner {
-          width: 36px;
-          height: 36px;
-          border: 4px solid #fff;
-          border-top-color: #38bdf8;
+        .logo {
+          font-size: 2.5rem;
+          font-weight: 700;
+          letter-spacing: 2px;
+          background: linear-gradient(90deg, #38bdf8, #3b82f6, #9333ea);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          animation: flicker 1.5s infinite alternate;
+        }
+        .pulse-ring {
+          position: absolute;
+          width: 200px;
+          height: 200px;
+          border: 4px solid #38bdf8;
           border-radius: 50%;
-          animation: spin 0.8s linear infinite;
-          margin-bottom: 16px;
+          animation: pulse 1.2s infinite ease-in-out;
+          z-index: 0;
         }
-        @keyframes spin {
-          to {
-            transform: rotate(360deg);
+        @keyframes flicker {
+          0% {
+            opacity: 0.9;
+            text-shadow: 0 0 8px #3b82f6;
+          }
+          100% {
+            opacity: 1;
+            text-shadow: 0 0 18px #38bdf8;
           }
         }
-        a {
-          color: #38bdf8;
-          text-decoration: none;
-          margin-top: 8px;
-          font-size: 14px;
+        @keyframes pulse {
+          0% {
+            transform: scale(0.95);
+            opacity: 0.7;
+          }
+          100% {
+            transform: scale(1.2);
+            opacity: 0;
+          }
         }
     </style>
 </head>
 <body>
-<div class="spinner"></div>
-<h2>Redirecting to Wristfellow...</h2>
-<p>If you're not redirected, <a href="https://wristfellow.cartpe.in/">click here</a>.</p>
+<div class="pulse-ring"></div>
+<div class="logo">Wristfellow</div>
 </body>
 </html>
