--- a/index.html
+++ b/index.html
@@ -1,68 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="refresh" content="0.8;url=https://wristfellow.cartpe.in/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wristfellow</title>
     <style>
-        * {
-          margin: 0;
-          padding: 0;
-          box-sizing: border-box;
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      body {
+        background: radial-gradient(circle at top left, #0f172a, #020617);
+        color: #fff;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+      }
+      .logo-img {
+        width: 140px;
+        height: 140px;
+        border-radius: 50%;
+        object-fit: cover;
+        box-shadow: 0 0 25px #facc15;
+        animation: zoomIn 0.7s ease-out;
+      }
+      .title {
+        font-size: 1.8rem;
+        font-weight: 600;
+        margin-top: 20px;
+        background: linear-gradient(to right, #facc15, #fcd34d);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        letter-spacing: 1px;
+      }
+      .pulse-ring {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        border: 3px solid #facc15;
+        border-radius: 50%;
+        animation: pulse 1.4s infinite ease-out;
+      }
+      @keyframes zoomIn {
+        from {
+          opacity: 0;
+          transform: scale(0.9);
         }
-        body {
-          background: radial-gradient(circle at top left, #0f172a, #020617);
-          color: #ffffff;
-          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-          height: 100vh;
-          overflow: hidden;
-          display: flex;
-          justify-content: center;
-          align-items: center;
+        to {
+          opacity: 1;
+          transform: scale(1);
         }
-        .logo {
-          font-size: 2.5rem;
-          font-weight: 700;
-          letter-spacing: 2px;
-          background: linear-gradient(90deg, #38bdf8, #3b82f6, #9333ea);
-          -webkit-background-clip: text;
-          -webkit-text-fill-color: transparent;
-          animation: flicker 1.5s infinite alternate;
+      }
+      @keyframes pulse {
+        0% {
+          transform: scale(0.95);
+          opacity: 0.6;
         }
-        .pulse-ring {
-          position: absolute;
-          width: 200px;
-          height: 200px;
-          border: 4px solid #38bdf8;
-          border-radius: 50%;
-          animation: pulse 1.2s infinite ease-in-out;
-          z-index: 0;
+        100% {
+          transform: scale(1.3);
+          opacity: 0;
         }
-        @keyframes flicker {
-          0% {
-            opacity: 0.9;
-            text-shadow: 0 0 8px #3b82f6;
-          }
-          100% {
-            opacity: 1;
-            text-shadow: 0 0 18px #38bdf8;
-          }
-        }
-        @keyframes pulse {
-          0% {
-            transform: scale(0.95);
-            opacity: 0.7;
-          }
-          100% {
-            transform: scale(1.2);
-            opacity: 0;
-          }
-        }
+      }
     </style>
-</head>
-<body>
-<div class="pulse-ring"></div>
-<div class="logo">Wristfellow</div>
-</body>
+  </head>
+  <body>
+    <div class="pulse-ring"></div>
+    <img src="azam_logo_1.jpeg" alt="Wristfellow Logo" class="logo-img" />
+    <div class="title">Wristfellow</div>
+  </body>
 </html>
