--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0.8;url=https://wristfellow.cartpe.in/" />
+    <meta http-equiv="refresh" content="0.8;url=https://wristfellow1.cartpe.in/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wristfellow</title>
     <style>
